apps/statuspage/ansible/manifests/service-envoy.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: envoy
  name: envoy
spec:
  ports:
    - name: 10000-tcp
      port: 10000
      protocol: TCP
      targetPort: 10000
  selector:
    app: envoy
  sessionAffinity: None
  type: ClusterIP
