apps/statuspage/ansible/manifests/template-patroni-cluster.yml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    labels:
      app: patroni-cluster
      cluster-name: patroni-cluster
    name: patroni-replica
  spec:
    ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    labels:
      app: patroni-cluster
      cluster-name: patroni-cluster
    name: patroni-master
  spec:
    ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
    selector:
      app: patroni-cluster
      cluster-name: patroni-cluster
      role: master
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Secret
  metadata:
    name: patroni-cluster
    labels:
      app: patroni-cluster
      cluster-name: patroni-cluster
  stringData:
    superuser-password: postgres
    replication-password: postgres
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    labels:
      app: patroni-cluster
      cluster-name: patroni-cluster
    name: patroni-replica
  spec:
    ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
    selector:
      app: patroni-cluster
      cluster-name: patroni-cluster
#      role: replica
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: apps/v1
  kind: StatefulSet
  metadata:
    creationTimestamp: null
    generation: 3
    labels:
      app: patroni-cluster
      cluster-name: patroni-cluster
    name: patroni-cluster
  spec:
    podManagementPolicy: OrderedReady
    replicas: 3
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: patroni-cluster
        cluster-name: patroni-cluster
    serviceName: patroni-cluster
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: patroni-cluster
          cluster-name: patroni-cluster
      spec:
        containers:
        - env:
          - name: POD_IP
            valueFrom:
              fieldRef:
                apiVersion: v1
                fieldPath: status.podIP
          - name: PATRONI_KUBERNETES_NAMESPACE
            valueFrom:
              fieldRef:
                apiVersion: v1
                fieldPath: metadata.namespace
          - name: PATRONI_KUBERNETES_LABELS
            value: '{app: patroni-cluster, cluster-name: patroni-cluster}'
          - name: PATRONI_SUPERUSER_USERNAME
            value: postgres
          - name: PATRONI_SUPERUSER_PASSWORD
            valueFrom:
              secretKeyRef:
                key: superuser-password
                name: patroni-cluster
          - name: PATRONI_REPLICATION_USERNAME
            value: postgres
          - name: PATRONI_REPLICATION_PASSWORD
            value: postgres
          - name: PATRONI_SCOPE
            value: patroni-cluster
          - name: PATRONI_NAME
            valueFrom:
              fieldRef:
                apiVersion: v1
                fieldPath: metadata.name
          - name: PATRONI_POSTGRESQL_DATA_DIR
            value: /home/postgres/pgdata/pgroot/data
          - name: PATRONI_POSTGRESQL_PGPASS
            value: /tmp/pgpass
          - name: PATRONI_POSTGRESQL_LISTEN
            value: 0.0.0.0:5432
          - name: PATRONI_RESTAPI_LISTEN
            value: 0.0.0.0:8008
          - name: APP_USER
            value: statuspage
          - name: APP_PASSWORD
            value: statuspage
          - name: APP_DATABASE
            value: patroni
          image: docker-registry.default.svc:5000/c81e6h-tools/patroni:10.6
          imagePullPolicy: IfNotPresent
          name: patroni-cluster
          ports:
          - containerPort: 8008
            protocol: TCP
          - containerPort: 5432
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /home/postgres/pgdata
            name: pgdata
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        serviceAccount: patroniocp
        serviceAccountName: patroniocp
        terminationGracePeriodSeconds: 0
        volumes:
        - name: pgdata
          emptyDir: {}
    updateStrategy:
      type: OnDelete
- apiVersion: v1
  kind: Endpoints
  metadata:
    name: patroni-cluster
    labels:
      app: patroni-cluster
      cluster-name: patroni-cluster
  subsets: []
- apiVersion: v1
  kind: ServiceAccount
  metadata:
    name: patroniocp
- apiVersion: rbac.authorization.k8s.io/v1
  kind: Role
  metadata:
    name: patroniocp
  rules:
  - apiGroups:
    - ""
    resources:
    - configmaps
    verbs:
    - create
    - get
    - list
    - patch
    - update
    - watch
    # delete is required only for 'patronictl remove'
    - delete
  - apiGroups:
    - ""
    resources:
    - endpoints
    verbs:
    - get
    - patch
    - update
    # the following three privileges are necessary only when using endpoints
    - create
    - list
    - watch
    # delete is required only for for 'patronictl remove'
    - delete
  - apiGroups:
    - ""
    resources:
    - pods
    verbs:
    - get
    - list
    - patch
    - update
    - watch
- apiVersion: rbac.authorization.k8s.io/v1
  kind: RoleBinding
  metadata:
    name: patroniocp
  roleRef:
    apiGroup: rbac.authorization.k8s.io
    kind: Role
    name: patroniocp
  subjects:
  - kind: ServiceAccount
    name: patroniocp
