apps/statuspage/ansible/manifests/route-envoy.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: envoy
  name: envoy
spec:
  host: statuspage-dev.pathfinder.gov.bc.ca
  port:
    targetPort: 10000-tcp
  to:
    kind: Service
    name: envoy
    weight: 100
  wildcardPolicy: None
