apps/statuspage/ansible/manifests/template-grafana.yml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: grafana
    name: grafana
  spec:
    ports:
    - name: 3000-tcp
      port: 3000
      protocol: TCP
      targetPort: 3000
    selector:
      app: grafana
      deploymentconfig: grafana
    sessionAffinity: None
    type: ClusterIP
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: grafana
    name: grafana
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: grafana
      deploymentconfig: grafana
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        labels:
          app: grafana
          deploymentconfig: grafana
      spec:
        containers:
        - image: grafana/grafana:latest
          imagePullPolicy: IfNotPresent
          name: grafana
          ports:
          - containerPort: 3000
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /etc/grafana/provisioning/dashboards/
            name: grafana-dashboard-providers
          - mountPath: /etc/grafana/provisioning/datasources/
            name: grafana-datasources
          - mountPath: /var/lib/grafana/dashboards/
            name: grafana-dashboards
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - configMap:
            defaultMode: 420
            name: grafana-dashboard-providers
          name: grafana-dashboard-providers
        - configMap:
            defaultMode: 420
            name: grafana-datasources
          name: grafana-datasources
        - configMap:
            defaultMode: 420
            name: grafana-dashboards
          name: grafana-dashboards
    test: false
    triggers:
    - type: ConfigChange
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: grafana
    name: grafana
  spec:
    host: grafana-statuspage-dev.pathfinder.gov.bc.ca
    port:
      targetPort: 3000-tcp
    to:
      kind: Service
      name: grafana
      weight: 100
    wildcardPolicy: None
- apiVersion: v1
  data:
    simple_dashboard.json: |-
      [...]
  kind: ConfigMap
  metadata:
    labels:
      app: grafana
    name: grafana-dashboards
- apiVersion: v1
  data:
    dashboard.yml: |-
      [...]
  kind: ConfigMap
  metadata:
    labels:
        app: grafana
    name:  grafana-dashboard-providers
- apiVersion: v1
  data:
    datasource.yml: |-
      apiVersion: 1
      datasources:
        - name: Prometheus
          type: prometheus
          access: proxy
          url: http://prometheus:9090
          orgId: 1 
          isDefault: true
          version: 1  
          editable: true
  kind: ConfigMap
  metadata:
    labels:
      app: grafana
    name: grafana-datasources
